--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -442,6 +442,20 @@
         .important-dates li:hover::before {
             width: 6px;
         }
+
+        @media (max-width: 600px) {
+            .animated-btn {
+                width: 100% !important;
+                min-width: 0;
+                display: block;
+                text-align: center;
+                font-size: 1rem;
+                padding: 0.85rem 1rem;
+                margin-top: 1rem;
+                white-space: normal;
+                word-break: break-word;
+            }
+        }
     </style>
 </head>
 
@@ -603,6 +617,47 @@
                 </ul>
             </div>
 
+            <!-- Publication Opportunities -->
+            <div class="content-card" data-aos="fade-up" data-aos-delay="150">
+                <h3 class="mb-4" style="color: #1a237e; font-weight: 700;">
+                    <i class="fas fa-star text-warning me-2"></i>Publication Opportunities
+                </h3>
+                <ul class="ps-0" style="list-style: none;">
+                    <li class="mb-2">
+                        <span class="text-warning" style="font-size:1.1em;"><i class="fas fa-star"></i></span>
+                        Authors have chance to publish in reputed international Journals Indexed in SCOPUS, ABDC, and WOS etc. Following journals have confirmed collaboration with our Conference:
+                        <ol class="mt-2 mb-2 ps-4" style="font-size:1em;">
+                            <li>International Journal of Learning and Change</li>
+                            <li>International Journal of Entrepreneurship and Small Business</li>
+                            <li>International Journal of Business and Globalization.</li>
+                            <li>International journal of E-Entrepreneurship and Innovation</li>
+                            <li>World Review of Entrepreneurship, Management and Sustainable Development.</li>
+                            <li>Journal of English Language Teaching.</li>
+                        </ol>
+                        <span class="ms-4">More journals of other domain will be added soon</span>
+                        <div class="fst-italic mt-2 ms-4" style="font-size:0.98em; color:#444;">
+                            (Kindly note: Publication cost to be borne by the authors, wherever applicable)
+                        </div>
+                    </li>
+                    <li class="mb-2">
+                        <span class="text-warning" style="font-size:1.1em;"><i class="fas fa-star"></i></span>
+                        Selected papers will be published in Edited book by Bloomsbury Publishing.
+                    </li>
+                    <li class="mb-2">
+                        <span class="text-warning" style="font-size:1.1em;"><i class="fas fa-star"></i></span>
+                        Best Paper Awards in each track.
+                    </li>
+                    <li class="mb-2">
+                        <span class="text-warning" style="font-size:1.1em;"><i class="fas fa-star"></i></span>
+                        Certificate of Paper Presentation / Participation.
+                    </li>
+                    <li class="mb-2">
+                        <span class="text-warning" style="font-size:1.1em;"><i class="fas fa-star"></i></span>
+                        Best Presentation Awards for PhD Scholars.
+                    </li>
+                </ul>
+            </div>
+
             <!-- Submission Guidelines -->
             <div class="content-card" data-aos="fade-up" data-aos-delay="200">
                 <h3 class="mb-4">Submission Guidelines</h3>
@@ -610,17 +665,22 @@
                     <div class="submission-step">
                         <div class="step-number">1</div>
                         <h4 class="mb-3">Abstract Submission</h4>
-                        <p>Submit an abstract of 300-500 words clearly stating the research objectives, methodology, findings, and implications.</p>
-                        <a href="#" class="animated-btn mt-3">
+                        <p>Submit an abstract of 300 words clearly stating the research objectives, methodology, findings, and implications.</p>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeBzNDZyzr3UlBBYst0sVjon_NKGgL51PdLtzHctP_fWWnhoA/viewform" class="animated-btn mt-3" target="_blank" rel="noopener noreferrer">
                             <i class="fas fa-file-alt"></i>Submit Abstract
                         </a>
+                    </div>
+                    <!-- Guidelines For Abstract Submission (moved here) -->
+                    <div class="my-4" style="background:#fff; border:3px dashed #111; border-radius:8px; padding:1.2rem 1.5rem; font-size:1.08rem;">
+                        <span style="font-weight:700; font-style:italic;">Guidelines For Abstract Submission:</span>
+                        The abstract of about 300 words must include the purpose, methodology, major findings of the research, originality and the keywords. It should be typed using Times New Roman 12 point for body text; 1.5 spaced. The Title page should include Title, Authors(s), Affiliation(s), and Contact Details.
                     </div>
                     
                     <div class="submission-step">
                         <div class="step-number">2</div>
                         <h4 class="mb-3">Full Paper Submission</h4>
                         <p>Upon acceptance of the abstract, submit a full paper of 6000-8000 words following the provided template.</p>
-                        <a href="#" class="animated-btn mt-3">
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSeBzNDZyzr3UlBBYst0sVjon_NKGgL51PdLtzHctP_fWWnhoA/viewform" class="animated-btn mt-3" target="_blank" rel="noopener noreferrer">
                             <i class="fas fa-file-upload"></i>Submit Paper
                         </a>
                     </div>
