--- a/committee.html
+++ b/committee.html
@@ -206,6 +206,9 @@
                         <a class="nav-link active" href="committee.html">Committee</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="venue.html">Venue</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact</a>
                     </li>
                 </ul>
@@ -218,65 +221,140 @@
         <div class="container">
             <h2 class="section-title" data-aos="fade-up">Conference Committee</h2>
             
-            <!-- External Advisory Committee -->
-            <div class="committee-card" data-aos="fade-up">
-                <h3 class="mb-4">External Advisory Committee</h3>
-                <ul class="committee-list">
-                    <li class="committee-member">
-                        <div class="member-name">Prof. John Smith</div>
-                        <div class="member-title">Chair, Department of Humanities</div>
-                        <div class="member-affiliation">Stanford University, USA</div>
-                    </li>
-                    <li class="committee-member">
-                        <div class="member-name">Prof. Maria Garcia</div>
-                        <div class="member-title">Director, Center for Social Sciences</div>
-                        <div class="member-affiliation">University of Oxford, UK</div>
-                    </li>
-                    <li class="committee-member">
-                        <div class="member-name">Prof. Rajesh Kumar</div>
-                        <div class="member-title">Head, School of Management</div>
-                        <div class="member-affiliation">IIM Ahmedabad, India</div>
-                    </li>
-                </ul>
-            </div>
-
-            <!-- Institutional Advisory Committee -->
-            <div class="committee-card" data-aos="fade-up" data-aos-delay="100">
-                <h3 class="mb-4">Institutional Advisory Committee</h3>
-                <ul class="committee-list">
-                    <li class="committee-member">
-                        <div class="member-name">Prof. Sarah Johnson</div>
-                        <div class="member-title">Dean, Faculty of Arts</div>
-                        <div class="member-affiliation">JIIT, Noida</div>
-                    </li>
-                    <li class="committee-member">
-                        <div class="member-name">Prof. David Lee</div>
-                        <div class="member-title">Head, Research & Development</div>
-                        <div class="member-affiliation">JIIT, Noida</div>
-                    </li>
-                </ul>
-            </div>
-
-            <!-- Internal Organizing Committee -->
-            <div class="committee-card" data-aos="fade-up" data-aos-delay="200">
-                <h3 class="mb-4">Internal Organizing Committee</h3>
-                <ul class="committee-list">
-                    <li class="committee-member">
-                        <div class="member-name">Dr. Priya Sharma</div>
-                        <div class="member-title">Conference Chair</div>
-                        <div class="member-affiliation">Department of Humanities and Social Sciences, JIIT</div>
-                    </li>
-                    <li class="committee-member">
-                        <div class="member-name">Dr. Michael Brown</div>
-                        <div class="member-title">Technical Program Chair</div>
-                        <div class="member-affiliation">Department of Management Studies, JIIT</div>
-                    </li>
-                    <li class="committee-member">
-                        <div class="member-name">Dr. Anita Patel</div>
-                        <div class="member-title">Publication Chair</div>
-                        <div class="member-affiliation">Department of Humanities and Social Sciences, JIIT</div>
-                    </li>
-                </ul>
+            <!-- Conference Committee Cards with Images and Grouped by Designation (Compact & Responsive) -->
+            <div class="container">
+                <!-- Chief Patrons -->
+                <h3 class="mb-3 mt-4 text-center">Chief Patrons</h3>
+                <div class="row justify-content-center mb-3">
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/chief1.png" class="rounded-circle mx-auto mt-2" alt="Shri Jaiprakash Gaur Ji" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Shri Jaiprakash Gaur Ji</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Founder Chancellor, JIIT</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/chief2.jpg" class="rounded-circle mx-auto mt-2" alt="Shri Manoj Gaur Ji" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Shri Manoj Gaur Ji</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Executive Chairman, Jaypee Group</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Patrons -->
+                <h3 class="mb-3 mt-4 text-center">Patrons</h3>
+                <div class="row justify-content-center mb-3">
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/patron1.jpg" class="rounded-circle mx-auto mt-2" alt="Prof. S.C. Saxena" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. S.C. Saxena</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Pro Chancellor, JIIT</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/patron2.jpg" class="rounded-circle mx-auto mt-2" alt="Prof. Bodh Raj Mehta" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. Bodh Raj Mehta</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Vice Chancellor, JIIT</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Conference Chair -->
+                <h3 class="mb-3 mt-4 text-center">Conference Chair</h3>
+                <div class="row justify-content-center mb-3">
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/conference_chair.png" class="rounded-circle mx-auto mt-2" alt="Prof. Monika Suri" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. Monika Suri</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Dean & HOD, HSS</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Convenors -->
+                <h3 class="mb-3 mt-4 text-center">Convenors</h3>
+                <div class="row justify-content-center mb-3">
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/convenor1.png" class="rounded-circle mx-auto mt-2" alt="Prof. Mukta Mani" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Prof. Mukta Mani</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Professor</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/convenor2.png" class="rounded-circle mx-auto mt-2" alt="Dr. Monali Bhattacharya" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Monali Bhattacharya</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">ASSOCIATE PROFESSOR, HSS & ASSOCIATE DEAN (IQAC)                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Co-Convenors -->
+                <h3 class="mb-3 mt-4 text-center">Co-Convenors</h3>
+                <div class="row justify-content-center mb-3">
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/coconvenor1.png" class="rounded-circle mx-auto mt-2" alt="Dr. Kanupriya Misra Bakhru" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Kanupriya Misra Bakhru</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Associate Professor</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/coconvenor2.png" class="rounded-circle mx-auto mt-2" alt="Dr. Manas Ranjan Behera" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Manas Ranjan Behera</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Grade-II)                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Organising Secretaries -->
+                <h3 class="mb-3 mt-4 text-center">Organising Secretaries</h3>
+                <div class="row justify-content-center mb-3">
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/secretary1.png" class="rounded-circle mx-auto mt-2" alt="Dr. Harleen Kaur" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Harleen Kaur</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Senior Grade)</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/secretary2.png" class="rounded-circle mx-auto mt-2" alt="Dr. Amandeep Kaur" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Amandeep Kaur</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Grade-II)</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6 col-md-3 mb-3">
+                        <div class="card h-100 text-center p-2">
+                            <img src="images/secretary3.png" class="rounded-circle mx-auto mt-2" alt="Dr. Purwa Srivastava" style="width:90px; height:90px; object-fit:contain; background:#fff;">
+                            <div class="card-body p-2">
+                                <h6 class="card-title mb-1" style="font-size:1rem;">Dr. Purwa Srivastava</h6>
+                                <div class="text-muted" style="font-size:0.9rem;">Assistant Professor (Grade-II)</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
