--- a/index.html
+++ b/index.html
@@ -818,7 +818,7 @@
                     <div class="custom-subtitle">Redefining Humanities, Social Sciences, and Management in the Digital Age</div>
                     <div class="custom-event-details">
                         <div class="custom-event-item"><i class="far fa-calendar-alt"></i> February 26–28, 2026</div>
-                        <div class="custom-event-item"><i class="fas fa-map-marker-alt"></i> JIIT, Noida, India</div>
+                        <div class="custom-event-item"><i class="fas fa-map-marker-alt"></i> JIIT Noida, India</div>
                         <div class="custom-event-item"><i class="fas fa-video"></i> Hybrid Mode</div>
                     </div>
                 </div>
@@ -867,7 +867,25 @@
         </button>
     </div>
 
-    <!-- Image Slider Panel -->
+    <!-- News Ticker (Sliding Message) -->
+    <div class="news-ticker" style="background: none; color: #1a237e; padding: 0.6rem 0; font-weight: 700; font-size: 1.08rem; overflow: hidden; position: relative; font-family: 'Poppins', 'Segoe UI', Arial, sans-serif; letter-spacing: 0.5px;">
+      <div class="news-ticker-inner" style="white-space: nowrap; display: inline-block; animation: ticker-slide 30s linear infinite; animation-delay: 0s;">
+        <a href="brochure.pdf" target="_blank" rel="noopener" style="color:#1976d2; text-decoration:underline; font-weight:700; font-family:inherit;">Brochure Released!</a>
+        <span style="margin:0 1.5rem; color:#1976d2;">|</span>
+        <span style="margin-right: 3rem; color:#1a237e; font-family:inherit;">Abstract Submission is now open! &nbsp;|&nbsp; Submit your abstracts by Sept 30, 2025 &nbsp;|&nbsp; Conference Dates: Feb 26–28, 2026 &nbsp;|&nbsp; Venue: JIIT, Noida, India</span>
+      </div>
+    </div>
+    <style>
+    @keyframes ticker-slide {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+    .news-ticker:hover .news-ticker-inner {
+      animation-play-state: paused;
+    }
+    </style>
+
+    <!-- Image Slider Panel
     <section class="image-slider-section py-5">
         <div class="container">
             <div id="imageSliderPanel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3500">
@@ -981,123 +999,88 @@
                 }
             }
         </style>
-    </section>
+    </section> -->
 
-    <!-- About ICHSM Section -->
-    <section class="about-ichsm-section">
-        <div class="container">
-            <div class="about-content">
-                <div class="about-header">
-                    <h2>About ICHSM 2026</h2>
-                    <div class="underline"></div>
-                </div>
-                <div class="about-text">
-                    <p class="lead">Redefining Humanities, Social Sciences, and Management in the Digital Age</p>
-                    <p>The ICHSM-2026 serves as a crucial platform for scholars, researchers, industry experts, and policymakers to explore the transformative impact of digital technologies across diverse academic and professional domains.</p>
-                    <p>In an era where artificial intelligence, big data, blockchain, and automation are reshaping traditional paradigms, this conference aims to foster interdisciplinary discussions on the evolving roles of literature, sociology, economics, psychology, political science, and business management.</p>
-                    <a href="about.html" class="about-btn">Read More <i class="fas fa-arrow-right"></i></a>
-                </div>
+    <!-- Notifications + About Section Row -->
+    <div class="container my-5">
+      <div class="row g-4 align-items-stretch">
+        <!-- About ICHSM Section -->
+        <div class="col-lg-7 col-12">
+          <section class="about-ichsm-section h-100 d-flex align-items-center" style="background: none; box-shadow: none; padding: 0; margin: 0;">
+            <div class="about-content" style="box-shadow: 0 10px 30px rgba(0,0,0,0.1);">
+              <div class="about-header">
+                <h2>About ICHSM 2026</h2>
+                <div class="underline"></div>
+              </div>
+              <div class="about-text">
+                <p class="lead">Redefining Humanities, Social Sciences, and Management in the Digital Age</p>
+                <p>The ICHSM-2026 serves as a crucial platform for scholars, researchers, industry experts, and policymakers to explore the transformative impact of digital technologies across diverse academic and professional domains.</p>
+                <p>In an era where artificial intelligence, big data, blockchain, and automation are reshaping traditional paradigms, this conference aims to foster interdisciplinary discussions on the evolving roles of literature, sociology, economics, psychology, political science, and business management.</p>
+                <a href="about.html" class="about-btn">Read More <i class="fas fa-arrow-right"></i></a>
+                <a href="brochure.pdf" class="about-btn ms-2" target="_blank" rel="noopener" style="background: linear-gradient(135deg, #2196f3, #1a237e);"><i class="fas fa-file-pdf me-2"></i>Download Brochure</a>
+              </div>
             </div>
+          </section>
         </div>
-        <style>
-            .about-ichsm-section {
-                background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);
-                padding: 60px 0;
-                margin-top: 40px;
-            }
-            .about-content {
-                max-width: 800px;
-                margin: 0 auto;
-                background: #fff;
-                border-radius: 20px;
-                padding: 40px;
-                box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-                position: relative;
-                overflow: hidden;
-            }
-            .about-content::before {
-                content: '';
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 5px;
-                background: linear-gradient(90deg, #1a237e, #2196f3);
-            }
-            .about-header {
-                text-align: center;
-                margin-bottom: 30px;
-            }
-            .about-header h2 {
-                color: #1a237e;
-                font-size: 2.2rem;
-                font-weight: 700;
-                margin-bottom: 15px;
-            }
-            .about-header .underline {
-                width: 60px;
-                height: 4px;
-                background: linear-gradient(90deg, #1a237e, #2196f3);
-                margin: 0 auto;
-                border-radius: 2px;
-            }
-            .about-text {
-                color: #444;
-                line-height: 1.8;
-            }
-            .about-text .lead {
-                color: #1a237e;
-                font-size: 1.3rem;
-                font-weight: 600;
-                margin-bottom: 20px;
-            }
-            .about-text p {
-                margin-bottom: 15px;
-                font-size: 1.05rem;
-            }
-            .about-btn {
-                display: inline-flex;
-                align-items: center;
-                gap: 10px;
-                background: linear-gradient(135deg, #1a237e, #2196f3);
-                color: #fff;
-                padding: 12px 25px;
-                border-radius: 30px;
-                text-decoration: none;
-                font-weight: 600;
-                margin-top: 20px;
-                transition: all 0.3s ease;
-            }
-            .about-btn:hover {
-                transform: translateY(-3px);
-                box-shadow: 0 5px 15px rgba(33, 150, 243, 0.3);
-                color: #fff;
-            }
-            .about-btn i {
-                transition: transform 0.3s ease;
-            }
-            .about-btn:hover i {
-                transform: translateX(5px);
-            }
-            @media (max-width: 768px) {
-                .about-ichsm-section {
-                    padding: 40px 0;
-                }
-                .about-content {
-                    padding: 30px 20px;
-                }
-                .about-header h2 {
-                    font-size: 1.8rem;
-                }
-                .about-text .lead {
-                    font-size: 1.1rem;
-                }
-                .about-text p {
-                    font-size: 1rem;
-                }
-            }
-        </style>
-    </section>
+        <!-- Notifications Section -->
+        <div class="col-lg-5 col-12">
+          <div class="card h-100 shadow-sm">
+            <div class="card-body">
+              <h4 class="mb-3" style="font-weight:700; color:#1a237e;">Notifications</h4>
+              <ul class="nav nav-tabs mb-3" id="notifTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link active" id="latest-tab" data-bs-toggle="tab" data-bs-target="#latest" type="button" role="tab" aria-controls="latest" aria-selected="true">Latest</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="registration-tab" data-bs-toggle="tab" data-bs-target="#registration" type="button" role="tab" aria-controls="registration" aria-selected="false">Registration</button>
+                </li>
+                <li class="nav-item" role="presentation">
+                  <button class="nav-link" id="dates-tab" data-bs-toggle="tab" data-bs-target="#dates" type="button" role="tab" aria-controls="dates" aria-selected="false">Important Dates</button>
+                </li>
+              </ul>
+              <div class="tab-content" id="notifTabContent">
+                <div class="tab-pane fade show active" id="latest" role="tabpanel" aria-labelledby="latest-tab">
+                  <div class="mb-2"><span class="fw-bold text-primary">10 July</span> &mdash; Brochure Released! <a href="brochure.pdf" target="_blank" rel="noopener" style="color:#1976d2; text-decoration:underline;">Download</a></div>
+                </div>
+                <div class="tab-pane fade" id="registration" role="tabpanel" aria-labelledby="registration-tab">
+                  <div class="mb-2">Registration opens: <span class="fw-bold">Oct 31, 2025</span></div>
+                </div>
+                <div class="tab-pane fade" id="dates" role="tabpanel" aria-labelledby="dates-tab">
+                  <div class="table-responsive">
+                    <table class="table table-borderless align-middle mb-0">
+                      <thead>
+                        <tr>
+                          <th class="fw-semibold" style="width:60%;">Event</th>
+                          <th class="fw-semibold text-end" style="width:40%;">Date</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <td>Abstract Submission Deadline</td>
+                          <td class="text-end">September 30, 2025</td>
+                        </tr>
+                        <tr>
+                          <td>Paper Submission</td>
+                          <td class="text-end">October 31, 2025</td>
+                        </tr>
+                        <tr>
+                          <td>Registration</td>
+                          <td class="text-end">October 31, 2025</td>
+                        </tr>
+                        <tr>
+                          <td>Conference Dates</td>
+                          <td class="text-end">Feb 26-28, 2026</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- START: Important Dates and Countdown Section -->
     <div class="countdown-container">
