--- a/registration.html
+++ b/registration.html
@@ -787,7 +787,7 @@
                 </div>
 
                 <div class="text-center mt-4">
-                    <a href="registration-form.html" class="btn-register">
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSeBzNDZyzr3UlBBYst0sVjon_NKGgL51PdLtzHctP_fWWnhoA/viewform" class="btn-register" target="_blank" rel="noopener noreferrer">
                         <i class="fas fa-user-plus me-2"></i>Register Now
                     </a>
                 </div>
