phone no. updated

--- a/comm.html
+++ b/comm.html
@@ -153,7 +153,7 @@
                         <h3 style="font-weight:600; font-size:1.05rem; margin-bottom:0.7rem;">Contact Us</h3>
                         <div style="border-bottom:2px solid #ff4d4d; width:32px; margin-bottom:0.5rem;"></div>
                         <div style="font-size:0.95rem;"><i class="fas fa-envelope"></i> icshmhssjiit@gmail.com</div>
-                        <div class="mt-1" style="font-size:0.95rem;"><i class="fas fa-phone"></i> +91-120-2594000</div>
+                        <div class="mt-1" style="font-size:0.95rem;"><i class="fas fa-phone"></i> +91-0120-2594-368/388/270/382/317/384</div>
                     </div>
                     <div class="col-md-3 col-12 mb-2" style="margin-bottom:0.5rem!important;">
                         <h3 style="font-weight:600; font-size:1.05rem; margin-bottom:0.7rem;">Quick Links</h3>
