--- a/acc.html
+++ b/acc.html
@@ -52,12 +52,11 @@
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown">
-                            Committee
+                            ICHSM Team
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="ext.html">External Advisory Committee</a></li>
-                            <li><a class="dropdown-item" href="insti.html">Institutional Advisory Committee</a></li>
-                            <li><a class="dropdown-item" href="int.html">Internal Organizing Committee</a></li>
+                            <li><a class="dropdown-item" href="committee.html">Organizing Committee</a></li>
+                            <li><a class="dropdown-item" href="advisory_committee.html">Advisory Committee</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
