--- a/call_for_paper.html
+++ b/call_for_paper.html
@@ -48,12 +48,11 @@
                         <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="call_for_paper.html">Call for paper</a></li>
                         <li><a href="regis.html">Registration</a></li>
-                         <li><a href="#">Committee</a>
+                        <li class="dropdown"><a href="#">ICHSM Team</a>
                             <ul>
-                            <li><a href="ext.html">External Advisory Committee</a></li>
-                            <li><a href="insti.html">Institutional Advisory Committee</a></li>
-                            <li><a href="int.html">Internal Organizing Committee</a></li>
-                          </ul> 
+                                <li><a href="committee.html">Organizing Committee</a></li>
+                                <li><a href="advisory_committee.html">Advisory Committee</a></li>
+                            </ul>
                         </li>
                         <li><a href="subm.html">Submission</a></li>
                         <li><a href="contact.html">Contact us</a></li>
