--- a/schedule.html
+++ b/schedule.html
@@ -66,7 +66,15 @@
                     <li class="nav-item"><a class="nav-link" href="registration.html">Registration</a></li>
                     <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
                     <li class="nav-item"><a class="nav-link active" href="schedule.html">Schedule</a></li>
-                    <li class="nav-item"><a class="nav-link" href="committee.html">Committee</a></li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="ichsmTeamDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            ICHSM Team
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="ichsmTeamDropdown">
+                            <li><a class="dropdown-item" href="committee.html">Organizing Committee</a></li>
+                            <li><a class="dropdown-item" href="advisory_committee.html">Advisory Committee</a></li>
+                        </ul>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="venue.html">Venue</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
                 </ul>
