--- a/contact.html
+++ b/contact.html
@@ -448,7 +448,15 @@
                         <a class="nav-link" href="schedule.html">Schedule</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="committee.html">Committee</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="ichsmTeamDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                ICHSM Team
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="ichsmTeamDropdown">
+                                <li><a class="dropdown-item" href="committee.html">Organizing Committee</a></li>
+                                <li><a class="dropdown-item" href="advisory_committee.html">Advisory Committee</a></li>
+                            </ul>
+                        </li>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="venue.html">Venue</a>
