--- a/index.html
+++ b/index.html
@@ -565,17 +565,17 @@
         }
 
         .organiser-label {
-            font-size: 0.75rem;
+            font-size: 1rem;
             color: var(--accent);
             font-weight: 600;
             text-transform: uppercase;
             letter-spacing: 0.5px;
             display: block;
-            margin-bottom: 0.2rem;
+            margin-bottom: 0.1rem;
         }
 
         .department-name {
-            font-size: 1rem;
+            font-size: 1.3rem;
             color: var(--primary);
             font-weight: 700;
             margin-bottom: 0.1rem;
@@ -583,14 +583,14 @@
         }
 
         .institution-name {
-            font-size: 0.9rem;
+            font-size: 1rem;
             color: var(--secondary);
             font-weight: 600;
             margin-bottom: 0.1rem;
         }
 
         .location-info {
-            font-size: 0.8rem;
+            font-size: 1rem;
             color: #666;
             font-weight: 500;
         }
@@ -949,12 +949,12 @@
             </div>
             <div class="conference-title">
                 <h1>International Conference on Humanities, Social Sciences and Management (ICHSM 2026)</h1>
-                <!-- <div class="organiser-details">
+                <div class="organiser-details">
                     <span class="organiser-label">Organised and Hosted by</span>
                     <div class="department-name">Department of Humanities and Social Sciences</div>
                     <div class="institution-name">Jaypee Institute of Information Technology</div>
                     <div class="location-info">Noida - 62, Uttar Pradesh, India</div>
-                </div> -->
+                </div>
             </div>
         </div>
     </header>
